--- a/src/styles/components/home/_pricing.scss
+++ b/src/styles/components/home/_pricing.scss
@@ -35,12 +35,3 @@
     }
   }
 }
-
-.pricing .section-header__title {
-  max-width: 80%;
-  align-self: center;
-
-  @include tab {
-    max-width: 100%;
-  }
-}
